--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qs": "^6.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "svix": "^1.69.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
