--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
+    "@stripe/stripe-js": "^7.6.1",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
@@ -30,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "sonner": "^2.0.6",
+    "stripe": "^18.3.0",
     "svix": "^1.69.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
