--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-visually-hidden": "^1.2.3",
+    "@sentry/nextjs": "^10.38.0",
     "@stripe/stripe-js": "^7.6.1",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
