--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.58.0",
     "@types/node": "^20",
     "@types/qs": "^6.14.0",
     "@types/react": "^19",
